--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -2,54 +2,59 @@
 	<form id="form-content">
 		<input type="text" name="id" style="display: none;" ng-model="data.id">
 		<center><h2>Chỉnh sửa mẫu dữ liệu thực vật</h2></center>
+		<div class="container map-detail" style="margin-top: 50px;">
 		<table>
 				<tr>
 					<td><label>Mã đề tài (*)</label></td>
 					<td>
-						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" maxlength="100" required>
+						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form"  required>
 					</td>
 				</tr>
-			</table>
+		</table>
+		</div>
+		<div class="container map-detail" style="margin-top: 50px;">
 		<table>
 			<h3 class="h3-title">SỐ HIỆU</h3>
 			<tr>
-				<td><label>1. Số hiệu thực địa (*):</label></td>
-				<td><input type="text" maxlength="100" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
+				<td><label>01.Số hiệu thực địa (*):</label></td>
+				<td><input type="text"  name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
 			</tr>
 			<tr>
-				<td><label>2. Số hiệu bảo tàng cơ sở(*):</label></td>
-				<td><input type="text" maxlength="100" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
+				<td><label>02.Số hiệu bảo tàng cơ sở(*):</label></td>
+				<td><input type="text"  name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
 			</tr>
 			<tr>
-				<td><label>3. Số hiệu BTTNVN:</label></td>
-				<td><input type="text" maxlength="100" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
+				<td><label>03.Số hiệu BTTNVN:</label></td>
+				<td><input type="text"  name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>4. Mã kí hiệu mẫu vật quốc tế:</label></td>
-				<td><input type="text" maxlength="100" name="maKyHieuMauVatQuocTe" ng-model="data.maKyHieuMauVatQuocTe" class="input-form"></td>
+				<td><label>04.Mã kí hiệu mẫu vật quốc tế:</label></td>
+				<td><input type="text"  name="maKyHieuMauVatQuocTe" ng-model="data.maKyHieuMauVatQuocTe" class="input-form"></td>
 			</tr>
 
 			<tr>
-				<td><label>5. Các kí hiệu mẫu vật khác:</label></td>
-				<td><input type="text" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form" maxlength="100" required></td>
+				<td><label>05.Các kí hiệu mẫu vật khác:</label></td>
+				<td><input type="text" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form"  required></td>
 			</tr>
 			<tr>
-				<td><label>6. Thông tin khác:</label></td>
-				<td><input type="text" name="thongTinKhac1" ng-model="data.thongTinKhac1" class="input-form" maxlength="100" required></td>
+				<td><label>06.Thông tin khác:</label></td>
+				<td><input type="text" name="thongTinKhac1" ng-model="data.thongTinKhac1" class="input-form"  required></td>
 			</tr>
 		</table>
+		</div>
+		<div class="container map-detail" style="margin-top: 50px;">
 		<table>
 			<h3 class="h3-title">TÊN MẪU VẬT</h3>
 			<tr>
-				<td><label>7. Tên Việt Nam (*):</label></td>
+				<td><label>07.Tên Việt Nam (*):</label></td>
 				<td><input type="text" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 			</tr>
 			<tr>
-				<td><label>8. Tên địa phương:</label></td>
+				<td><label>08.Tên địa phương:</label></td>
 				<td><input type="text" name="tenDiaPhuong" ng-model="data.tenDiaPhuong" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>9. Tên Tiếng Anh:</label></td>
+				<td><label>09.Tên Tiếng Anh:</label></td>
 				<td><input type="text" name="tenTiengAnh" ng-model="data.tenTiengAnh" class="input-form"></td>
 			</tr>
 			<tr>
@@ -79,7 +84,7 @@
 			</tr>
 			<tr>
 				<td>Bộ (*):</td>
-				<td><input type="text" name="bo" ng-model="data.bo" id="bo" class="input-form" required</td>
+				<td><input type="text" name="bo" ng-model="data.bo" id="bo" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td>Phân bộ:</td>
@@ -120,9 +125,11 @@
 			</tr>
 			<tr>
 				<td><label>13. Thông tin khác:</label></td>
-				<td><input type="text" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form" maxlength="100" required></td>
+				<td><input type="text" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form"  required></td>
 			</tr>
 		</table>
+		</div>
+		<div class="container map-detail" style="margin-top: 50px;">
 		<table>
 			<h3 class="h3-title">SỐ LƯỢNG VÀ CHẤT LƯỢNG MẪU VẬT</h3>
 			<tr>
@@ -153,9 +160,11 @@
 			</tr>
 			<tr>
 				<td><label>19. Thông tin khác:</label></td>
-				<td><input type="text" name="thongTinKhac3" ng-model="data.thongTinKhac3" class="input-form" maxlength="100" required></td>
+				<td><input type="text" name="thongTinKhac3" ng-model="data.thongTinKhac3" class="input-form"  required></td>
 			</tr>		
 		</table>
+		</div>
+		<div class="container map-detail" style="margin-top: 50px;">
 		<table>
 			<h3 class="h3-title">NHÓM DỮ LIỆU THU MẪU</h3>
 			<tr>
@@ -256,9 +265,11 @@
 			</tr>
 			<tr>
 				<td><label>33. Thông tin khác:</label></td>
-				<td><input type="text" name="thongTinKhac4" class="input-form" ng-model="data.thongTinKhac4" maxlength="100" required></td>
+				<td><input type="text" name="thongTinKhac4" class="input-form" ng-model="data.thongTinKhac4"  required></td>
 			</tr>
 		</table>
+		</div>
+		<div class="container map-detail" style="margin-top: 50px;">
 		<table>
 			<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN TÍCH MẪU</h3>
 			<tr>
@@ -279,52 +290,42 @@
 			</tr>
 			<tr>
 				<td><label>38. Mô tả/đặc điểm hình thái (*)</label></td>
-				<td><input type="text" name="moTaHinhThaiStr" ng-model="data.moTaHinhThaiStr" class="input-form">
-				<input type="file" multiple accept="video/mp4,video/x-m4v,video/*" name="moTaHinhThaiFile" ng-model="data.moTaHinhThaiFile" class="input-form"></td>
+				<input type="file" multiple accept=".doc, .docx, .pdf" name="moTaHinhThaiFile" ng-model="data.moTaHinhThaiFile" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>39. Giới tính, giống:</label></td>
-				<td><input type="text" name="gioiTinhGiong" ng-model="data.gioiTinhGiong" class="input-form" required></td>
-			</tr>
-			<tr>
-				<td><label>40. Giai đoạn sống trong vòng đời:</label></td>
-				<td><input type="text" name="giaiDoanSongTrongVongDoi" ng-model="data.giaiDoanSongTrongVongDoi" class="input-form" required></td>
-			</tr>
-			<tr>
-				<td><label>41. Hình vẽ:</label></td>
+				<td><label>39. Hình vẽ:</label></td>
 				<td><input type="file" name="hinhVe" ng-model="data.hinhVe" class="input-form" accept="image/x-png, image/gif, image/jpeg, .docx, .doc, .pdf" ></td>
 			</tr>
 			<tr>
-				<td><label>42. Thông tin khác:</label></td>
-				<td><input type="text" name="thongTinKhac5" class="input-form" ng-model="data.thongTinKhac5" maxlength="100" required></td>
+				<td><label>40. Thông tin khác:</label></td>
+				<td><input type="text" name="thongTinKhac5" class="input-form" ng-model="data.thongTinKhac5"  required></td>
 			</tr>
 		</table>
+		</div>
+		<div class="container map-detail" style="margin-top: 50px;">
 		<table>
 			<h3 class="h3-title">NHÓM DỮ LIỆU HÌNH ẢNH, PHIM, TÀI LIỆU MẪU VẬT</h3>
 			<tr>
-				<td><label>43. Ảnh mẫu vật (*):</label></td>
+				<td><label>41. Ảnh mẫu vật (*):</label></td>
 				<td><input type="file" multiple name="anhMauVat" ng-model="data.anhMauVat" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf" required></td>
 			</tr>
 			<tr>
-				<td><label>44. Hình ảnh mẫu ngoài thực địa:</label></td>
+				<td><label>42. Hình ảnh mẫu ngoài thực địa:</label></td>
 				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>45. Thông tin về phim, video:</label></td>
+				<td><label>43. Thông tin về phim, video (*): </label></td>
 				<td>
-					<table>
-						<tr>
-							<td>
-								<input type="text" name = "videoStr" ng-model="data.videoStr" class="input-form" placeholder="Thông tin thêm về phim">
-							</td>
-							<td>
-								<input type="file" accept="video/mp4,video/x-m4v,video/*" name="videoFile" ng-model="data.videoFile" class="input-form" required>
-							</td>
-						</tr>
-					</table>	
+					<input type="text" title="" name="videoStr" ng-model="data.videoStr" class="input-form" placeholder="Thông tin thêm về phim">
+				</td>
+				</tr>
+			<tr>
+				<td><label>44. Video (*):</label></td>
+				<td>
+					<input type="file" accept="video/mp4,video/x-m4v,video/*" name ="videoFile" ng-model="data.videoFile" class="input-form" required>
 				</td>
 			</tr>
-			<tr><td colspan="2"><label>46. Xử lý chế tác mẫu vật: </label></td></tr>
+			<tr><td colspan="2"><label>45. Xử lý chế tác mẫu vật: </label></td></tr>
 			<tr>
 				<td>Hình ảnh đính kèm Xử lý chế tác:</td>
 				<td><input type="file" multiple name="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" accept="image/x-png, image/gif, image/jpeg, .pdf" class="input-form"></td>
@@ -345,7 +346,7 @@
 				<td>Ảnh mẫu sau chế tác:</td>
 				<td><input type="file" name="anhMauSauCheTac" ng-model="data.anhMauSauCheTac" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf" ></td>
 			</tr>
-			<tr><td colspan="2"><label>47. Thông tin DNA</label></td></tr>
+			<tr><td colspan="2"><label>46. Thông tin DNA</label></td></tr>
 			<tr>
 				<td>Vị trí lấy mẫu DNA (lá, thân, rễ,...):</td>
 				<td><input type="text" id="viTriLayMauDNA" name="boPhanLayMauDNA" ng-model="data.boPhanLayMauDNA" class="input-form"></td>
@@ -377,59 +378,63 @@
 				<td><input type="text" name="congBoQuocTe" ng-model="data.congBoQuocTe" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>48. Thông tin mẫu hạt phấn</label></td>
+				<td><label>47. Thông tin mẫu hạt phấn</label></td>
 				<td><input type="text" multiple name="thongTinMauHatPhan" ng-model="data.thongTinMauHatPhan" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>49. Thông tin khác:</label></td>
-				<td><input type="text" name="thongTinKhac5" ng-model="data.thongTinKhac5" class="input-form" maxlength="100" required></td>
+				<td><label>48. Thông tin khác:</label></td>
+				<td><input type="text" name="thongTinKhac5" ng-model="data.thongTinKhac5" class="input-form"  required></td>
 			</tr>	
 		</table>
+		</div>
+		<div class="container map-detail" style="margin-top: 50px;">
 		<table>
 			<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN BỐ VÀ GIÁ TRỊ SỬ DỤNG</h3>
 			<tr>
-				<td><label>50. Phân bố Việt Nam (*):</label></td>
+				<td><label>49. Phân bố Việt Nam (*):</label></td>
 				<td>
 					<input type="text" name="phanBoVietNamStr" ng-model="data.phanBoVietNamStr" class="input-form" required>
 					<input type="file" multiple name="phanBoVietNamFile" ng-model="data.phanBoVietNamFile" required>
 				</td>
 			</tr>
 			<tr>
-				<td><label>51. Phân bố trên thế giới (nếu có):</label></td>
+				<td><label>50. Phân bố trên thế giới (nếu có):</label></td>
 				<td>
 					<input type="text" name="phanBoTrenTheGioiStr" ng-model="data.phanBoTrenTheGioiStr" class="input-form">
 					<input type="file" multiple name="phanBoTrenTheGioiFile" ng-model="data.phanBoTrenTheGioiFile">
 				</td>
 			</tr>
 			<tr>
-				<td><label>52. Giá trị sử dụng:</label></td>
+				<td><label>51. Giá trị sử dụng:</label></td>
 				<td><input type="text" name="giaTriSuDung" ng-model="data.giaTriSuDung" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>53. Thông tin khác:</label></td>
-				<td><input type="text" name="thongTinKhac6" ng-model="data.thongTinKhac6" class="input-form" maxlength="100" required></td>
+				<td><label>52. Thông tin khác:</label></td>
+				<td><input type="text" name="thongTinKhac6" ng-model="data.thongTinKhac6" class="input-form"  required></td>
 			</tr>
 		</table>
+		</div>
+		<div class="container map-detail" style="margin-top: 50px;">
 		<table>
 			<h3 class="h3-title">NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 			<tr>
-				<td><label>54. Ngày nhập mẫu: </label></td>
+				<td><label>53. Ngày nhập mẫu: </label></td>
 				<td><input type="date" name="ngayNhapMau" ng-model="data.ngayNhapMau" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>55. Người giao mẫu: </label></td>
+				<td><label>54. Người giao mẫu: </label></td>
 				<td><input type="text" name="nguoiGiao" ng-model="data.nguoiGiao" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>56. Người nhận mẫu</label></td>
+				<td><label>55. Người nhận mẫu</label></td>
 				<td><input type="text" name="nguoiNhan" ng-model="data.nguoiNhan" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>57. Cơ quan nhập mẫu: </label></td>
+				<td><label>56. Cơ quan nhập mẫu: </label></td>
 				<td><input type="text" name="coQuanNhapVatMau" ng-model="data.coQuanNhapVatMau" id="coQuanNhapVatMau" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>58. Hình thức nhập mẫu:</label></td>
+				<td><label>57. Hình thức nhập mẫu:</label></td>
 				<td>
 					<select class="select-box" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
 						<option value="Thu thập">Thu thập</option>
@@ -440,7 +445,7 @@
 			</tr>
 
 			<tr>
-				<td><label>59. Trao đổi mẫu: </label></td>
+				<td><label>58. Trao đổi mẫu: </label></td>
 				<td>
 					<select name="traoDoiMau" class="select-box" ng-model="data.traoDoiMau">
 						<option value="Có thể">Có thể</option>
@@ -449,7 +454,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td><label>60. Vay mượn mẫu:</label></td>
+				<td><label>59. Vay mượn mẫu:</label></td>
 				<td>
 					<select class="select-box" name="vayMuon" ng-model="data.vayMuon">
 						<option value="Có thể">Có thể</option>
@@ -458,42 +463,59 @@
 				</td>
 			</tr>
 			<tr>
-				<td><label>61. Khu lưu trữ mẫu:</label></td>
-				<td><input type="text" name="khuLuuTruMau" ng-model="data.khuLuuTruMau" class="input-form"></td>
-			</tr>
-			<tr>
-				<td><label>62. Nơi lưu trữ:</label></td>
+				<td><label>60. Nơi lưu trữ:</label></td>
 				<td><input type="text" name="noiLuuTru" ng-model="data.noiLuuTru" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>63. Giấy phép nhập mẫu:</label></td>
+				<td><label>61. Khu lưu trữ mẫu:</label></td>
+			</tr>
+			<tr>
+				<td>Phòng</td>
+				<td><input type="text" name="phong" ng-model="data.phong" class="input-form"></td>
+			</tr>
+			<tr>
+				<td>Tủ, giá</td>
+				<td><input type="text" name="tuGia" ng-model="data.tuGia" class="input-form"></td>
+			</tr>
+			<tr>
+				<td>Ngăn tủ, ngăn giá</td>
+				<td><input type="text" name="ngan" ng-model="data.ngan" class="input-form"></td>
+			</tr>
+			<tr>
+				<td>Hộp</td>
+				<td><input type="text" name="hop" ng-model="data.hop" class="input-form"></td>
+			</tr>
+			<tr>
+				<td><label>62. Giấy phép nhập mẫu:</label></td>
 				<td><input type="file" name="giayPhepNhapMau" ng-model="data.giayPhepNhapMau" class="input-form" accept="image/x-png, image/gif, image/jpeg, .docx, .doc, .pdf"></td>
 			</tr>
 			<tr>
-				<td><label>64. Hồ sơ nhập mẫu vật đi kèm:</label></td>
+				<td><label>63. Hồ sơ nhập mẫu vật đi kèm:</label></td>
 				<td><input type="file" name="hoSoNhapMauVatDiKem" ng-model="data.hoSoNhapMauVatDiKem" class="input-form" accept=".doc, docx, .pdf" ></td>
 			</tr>
 			<tr>
-				<td><label>65. Người nhập phiếu mẫu vật (*):</label></td>
+				<td><label>64. Người nhập phiếu mẫu vật (*):</label></td>
 				<td><input type="text" name="nguoiNhapPhieuMauVat" ng-model="data.nguoiNhapPhieuMauVat" class="input-form" required></td>
 			</tr>
 			<tr>
-				<td><label>66. Người nhập thông tin vào phần mềm:</label></td>
+				<td><label>65. Người nhập thông tin vào phần mềm:</label></td>
 				<td><input type="text" name="nguoiNhapVaoPhanMem" ng-model="data.nguoiNhapVaoPhanMem" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>67. Thông tin khác:</label></td>
-				<td><input type="text" name="thongTinKhac7" ng-model="data.thongTinKhac7" class="input-form" maxlength="100" required></td>
+				<td><label>66. Thông tin khác:</label></td>
+				<td><input type="text" name="thongTinKhac7" ng-model="data.thongTinKhac7" class="input-form"  required></td>
 			</tr>
 		</table>
-
+		</div>
+		<div class="container map-detail" style="margin-top: 50px;">
 		<table>
 			<h3 class="h3-title">NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
 			<tr>
-				<td><label>68. Thông tin khác</label></td>
+				<td><label>67. Thông tin khác</label></td>
 				<td><input type="text" name="thongTinKhac8" ng-model="data.thongTinKhac8" class="input-form"></td>
 			</tr>
 		</table>
+		</div>
 	</form>
 	<center><button type="submit" style="margin-top: 30px;" ng-click="updatePost()" class="btn btn-success btn-lg">Cập nhật</button></center>
 </div>
