--- a/app/views/users/add-geological-form.template.html
+++ b/app/views/users/add-geological-form.template.html
@@ -7,7 +7,7 @@
 				<tr>
 					<td><label>Mã đề tài (*)</label></td>
 					<td>
-						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" maxlength="100" required>
+						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form"  required>
 					</td>
 				</tr>
 			</table>
@@ -16,29 +16,29 @@
 			<table>
 				<h3 class="h3-title">SỐ HIỆU</h3>
 				<tr>
-					<td><label>1. Số hiệu thực địa (*):</label></td>
-					<td><input type="text" maxlength="100" title="{{tooltips[1]}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
+					<td><label>01. Số hiệu thực địa (*):</label></td>
+					<td><input type="text"  title="{{tooltips[1]}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>2. Số hiệu bảo tàng cơ sở(*):</label></td>
-					<td><input type="text" maxlength="100" title="{{tooltips[2]}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
+					<td><label>02. Số hiệu bảo tàng cơ sở(*):</label></td>
+					<td><input type="text"  title="{{tooltips[2]}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>3. Số hiệu BTTNVN:</label></td>
-					<td><input type="text" maxlength="100" title="{{tooltips[3]}}" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
+					<td><label>03. Số hiệu BTTNVN:</label></td>
+					<td><input type="text"  title="{{tooltips[3]}}" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>4. Mã kí hiệu mẫu vật quốc tế:</label></td>
-					<td><input type="text" maxlength="100" title="{{tooltips[4]}}" name="maKyHieuMauVatQuocTe" ng-model="data.maKyHieuMauVatQuocTe" class="input-form"></td>
+					<td><label>04. Mã kí hiệu mẫu vật quốc tế:</label></td>
+					<td><input type="text"  title="{{tooltips[4]}}" name="maKyHieuMauVatQuocTe" ng-model="data.maKyHieuMauVatQuocTe" class="input-form"></td>
 				</tr>
 
 				<tr>
-					<td><label>5. Các kí hiệu mẫu vật khác:</label></td>
-					<td><input type="text" title="{{tooltips[5]}}" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form" maxlength="100" required></td>
+					<td><label>05. Các kí hiệu mẫu vật khác:</label></td>
+					<td><input type="text" title="{{tooltips[5]}}" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form"  required></td>
 				</tr>
 				<tr>
-					<td><label>6. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[6]}}" name="thongTinKhac1" ng-model="data.thongTinKhac1" class="input-form" maxlength="100" required></td>
+					<td><label>06. Thông tin khác:</label></td>
+					<td><input type="text" title="{{tooltips[6]}}" name="thongTinKhac1" ng-model="data.thongTinKhac1" class="input-form"  required></td>
 				</tr>
 			</table>
 		</div>
@@ -46,15 +46,15 @@
 			<table>
 				<h3 class="h3-title">TÊN MẪU</h3>
 				<tr>
-					<td><label>7. Tên Việt Nam(phổ thông) (*):</label></td>
+					<td><label>07. Tên Việt Nam(phổ thông) (*):</label></td>
 					<td><input type="text" title="{{tooltips[7]}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>8. Tên địa phương:</label></td>
+					<td><label>08. Tên địa phương:</label></td>
 					<td><input type="text" title="{{tooltips[8]}}" name="tenDiaPhuong" ng-model="data.tenDiaPhuong" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>9. Tên Tiếng Anh:</label></td>
+					<td><label>09. Tên Tiếng Anh:</label></td>
 					<td><input type="text" title="{{tooltips[9]}}" name="tenTiengAnh" ng-model="data.tenTiengAnh" class="input-form"></td>
 				</tr>
 				<tr>
@@ -71,7 +71,7 @@
 				</tr>
 				<tr>
 					<td><label>13. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[13]}}" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form" maxlength="100" required></td>
+					<td><input type="text" title="{{tooltips[13]}}" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form"  required></td>
 				</tr>
 			</table>
 		</div>
@@ -106,7 +106,7 @@
 				</tr>
 				<tr>
 					<td><label>19. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[19]}}" name="thongTinKhac3" ng-model="data.thongTinKhac3" class="input-form" maxlength="100" required></td>
+					<td><input type="text" title="{{tooltips[19]}}" name="thongTinKhac3" ng-model="data.thongTinKhac3" class="input-form"  required></td>
 				</tr>	
 			</table>
 		</div>
@@ -195,7 +195,7 @@
 					<td><input type="file" ng-model="data.banDo" title="{{tooltips[33]}}" name="banDo" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>29: Thông tin khác </label></td>
+					<td><label>29. Thông tin khác </label></td>
 					<td><input type="text" ng-model="data.thongTinKhac4" title="{{tooltips[34]}}" name="thongTinKhac4" class="input-form"></td>
 				</tr>
 			</table>
@@ -237,18 +237,18 @@
 					<td><label>37. Các phân tích khác:</label></td>
 					<td><input type="file" title="{{tooltips[42]}}" name="phanTichKhac" ng-model="data.phanTichKhac" class="input-form" accept=".docx, .doc, .pdf" ></td>
 				</tr>
-				<tr><td colspan="2"><h4>38. Nhóm dữ liệu địa chất</h4></td></tr>
+					<td><label>38. Nhóm dữ liệu địa chất</label></td>
 				<tr>
-					<td><label>Đặc điểm địa chất: </label></td>
+					<td>Đặc điểm địa chất: </td>
 					<td><input type="text" title="{{tooltips[43]}}" name="dacDiemDiaChat" ng-model="data.dacDiemDiaChat" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>Loại hình nguồn gốc: </label></td>
+					<td>Loại hình nguồn gốc:</td>
 					<td><input type="text" title="{{tooltips[44]}}" name="loaiHinhNguonGoc" ng-model="data.loaiHinhNguonGoc" class="input-form"></td>
 				</tr>
 
 				<tr>
-					<td><label>39: Thông tin khác </label></td>
+					<td><label>39. Thông tin khác </label></td>
 					<td><input type="text" ng-model="data.thongTinKhac5" title="{{tooltips[45]}}" name="thongTinKhac5" class="input-form"></td>
 				</tr>
 			</table>
@@ -265,21 +265,18 @@
 					<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple title="{{tooltips[47]}}" name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>42. Thông tin về phim, video:</label></td>
+					<td><label>42. Thông tin về phim, video (*): </label></td>
 					<td>
-						<table>
-							<tr>
-								<td>
-									<input type="text" title="{{tooltips[48]}}" name="videoStr" ng-model="data.videoStr" class="input-form" placeholder="Thông tin thêm về phim">
-								</td>
-								<td>
-									<input type="file" accept="video/mp4,video/x-m4v,video/*" name ="videoFile" ng-model="data.videoFile" class="input-form" required>
-								</td>
-							</tr>
-						</table>	
+						<input type="text" title="{{tooltips[48]}}" name="videoStr" ng-model="data.videoStr" class="input-form" placeholder="Thông tin thêm về phim">
+					</td>
+					</tr>
+				<tr>
+					<td><label>43. Video (*):</label></td>
+					<td>
+						<input type="file" accept="video/mp4,video/x-m4v,video/*" name ="videoFile" ng-model="data.videoFile" class="input-form" required>
 					</td>
 				</tr>
-				<tr><td colspan="2"><label>43. Xử lý chế tác mẫu vật: </label></td></tr>
+				<tr><td colspan="2"><label>44. Xử lý chế tác mẫu vật: </label></td></tr>
 				<tr>
 					<td>Hình ảnh đính kèm Xử lý chế tác:</td>
 					<td><input type="file" multiple title="{{tooltips[49]}}" name="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" accept="image/x-png, image/gif, image/jpeg, .pdf" class="input-form"></td>
@@ -305,7 +302,7 @@
 					<td><input type="file" title="{{tooltips[54]}}" name="anhMauSauCheTac" ng-model="data.anhMauSauCheTac" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf" ></td>
 				</tr>
 				<tr>
-					<td><label>44: Thông tin khác </label></td>
+					<td><label>45. Thông tin khác </label></td>
 					<td><input type="text" ng-model="data.thongTinKhac6" title="{{tooltips[55]}}" name="thongTinKhac6" class="input-form"></td>
 				</tr>
 			</table>
@@ -315,35 +312,35 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU ĐẶC ĐIỂM MẪU VẬT</h3>
 				<tr>
-					<td><label>45. Loại mẫu (*):</label></td>
+					<td><label>46. Loại mẫu (*):</label></td>
 					<td><input type="text" title="{{tooltips[56]}}" name="loaiMau" ng-model="data.loaiMau" required id="loaiMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>46. Hình dáng mẫu, dạng tồn tại (*):</label></td>
+					<td><label>47. Hình dáng mẫu, dạng tồn tại (*):</label></td>
 					<td><input type="text" title="{{tooltips[57]}}" name="hinhDangMauTonTai" ng-model="data.hinhDangMauTonTai" required id="hinhDangMauTonTai" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>47. Màu sắc (*):</label></td>
+					<td><label>48. Màu sắc (*):</label></td>
 					<td><input type="text" title="{{tooltips[58]}}" name="mauSac" ng-model="data.mauSac" required id="mauSac" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>48. Phân loại sử dụng:</label></td>
+					<td><label>49. Phân loại sử dụng:</label></td>
 					<td><input type="text" title="{{tooltips[59]}}" name="phanLoaiSuDung" ng-model="data.phanLoaiSuDung" id="phanLoaiSuDung" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>49. Thành phần khoáng vật (*):</label></td>
+					<td><label>50. Thành phần khoáng vật (*):</label></td>
 					<td><input type="text" title="{{tooltips[60]}}" name="thanhPhanKhoangVat" ng-model="data.thanhPhanKhoangVat" required class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>50. Tính chất vật lý (*):</label></td>
+					<td><label>51. Tính chất vật lý (*):</label></td>
 					<td><input type="text" title="{{tooltips[61]}}" name="tinhChatVatLy" ng-model="data.tinhChatVatLy" required id="tinhChatVatLy" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>51. Công thức hóa học:</label></td>
+					<td><label>52. Công thức hóa học:</label></td>
 					<td><input type="file" id="congThucHoaHoc" ng-model="data.congThucHoaHoc" title="{{tooltips[62]}}" name="congThucHoaHoc" accept=".doc, .docx, .pdf" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>52. Thành phần hóa học:</label></td>
+					<td><label>53. Thành phần hóa học:</label></td>
 					<td><input type="text" title="{{tooltips[63]}}" name="thanhPhanHoaHoc" ng-model="data.thanhPhanHoaHoc" id="thanhPhanHoaHoc" class="input-form"></td>
 				</tr>
 			</table>
@@ -352,7 +349,7 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN BỐ VÀ GIÁ TRỊ SỬ DỤNG</h3>
 				<tr>
-					<td><label>53. Phân bố Việt Nam (*):</label></td>
+					<td><label>54. Phân bố Việt Nam (*):</label></td>
 					<td>
 					<table>
 						<tr>
@@ -363,7 +360,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>54. Phân bố trên thế giới (nếu có):</label></td>
+					<td><label>55. Phân bố trên thế giới (nếu có):</label></td>
 					<td>
 						<table>
 							<tr>
@@ -374,11 +371,11 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>55. Giá trị sử dụng (tài nguyên)(nếu có):</label></td>
+					<td><label>56. Giá trị sử dụng (tài nguyên)(nếu có):</label></td>
 					<td><input type="text" ng-model="data.giaTriSuDung" title="{{tooltips[66]}}" name="giaTriSuDung" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>56: Thông tin khác </label></td>
+					<td><label>57. Thông tin khác </label></td>
 					<td><input type="text" ng-model="data.thongTinKhac7" title="{{tooltips[67]}}" name="thongTinKhac7" class="input-form"></td>
 				</tr>
 			</table>
@@ -387,23 +384,23 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 				<tr>
-					<td><label>57. Ngày nhập mẫu: </label></td>
+					<td><label>58. Ngày nhập mẫu: </label></td>
 					<td><input type="date" title="{{tooltips[68]}}" name="ngayNhapMau" ng-model="data.ngayNhapMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>58. Người giao mẫu: </label></td>
+					<td><label>59. Người giao mẫu: </label></td>
 					<td><input type="text" title="{{tooltips[69]}}" name="nguoiGiao" ng-model="data.nguoiGiao" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>59. Người nhận mẫu</label></td>
+					<td><label>60. Người nhận mẫu</label></td>
 					<td><input type="text" title="{{tooltips[70]}}" name="nguoiNhan" ng-model="data.nguoiNhan" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>60. Cơ quan nhập mẫu: </label></td>
+					<td><label>61. Cơ quan nhập mẫu: </label></td>
 					<td><input type="text" title="{{tooltips[71]}}" name="coQuanNhapVatMau" ng-model="data.coQuanNhapVatMau" id="coQuanNhapVatMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>61. Hình thức nhập mẫu:</label></td>
+					<td><label>62. Hình thức nhập mẫu:</label></td>
 					<td>
 						<select class="select-box" title="{{tooltips[72]}}" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
 							<option value="Thu thập">Thu thập</option>
@@ -414,7 +411,7 @@
 				</tr>
 
 				<tr>
-					<td><label>62. Trao đổi mẫu: </label></td>
+					<td><label>63. Trao đổi mẫu: </label></td>
 					<td>
 						<select class="select-box" title="{{tooltips[73]}}" name="traoDoiMau" ng-model="data.traoDoiMau">
 							<option value="Có thể">Có thể</option>
@@ -423,7 +420,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>63. Vay mượn mẫu:</label></td>
+					<td><label>64. Vay mượn mẫu:</label></td>
 					<td>
 						<select class="select-box" title="{{tooltips[74]}}" name="vayMuon" ng-model="data.vayMuon">
 							<option value="Có thể">Có thể</option>
@@ -432,31 +429,46 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>64. Khu lưu trữ mẫu:</label></td>
-					<td><input type="text" title="{{tooltips[75]}}" name="khuLuuTruMau" ng-model="data.khuLuuTruMau" class="input-form"></td>
-				</tr>
-				<tr>
 					<td><label>65. Nơi lưu trữ:</label></td>
 					<td><input type="text" title="{{tooltips[76]}}" name="noiLuuTru" ng-model="data.noiLuuTru" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>66. Giấy phép nhập mẫu:</label></td>
+					<td><label>66. Khu lưu trữ mẫu:</label></td>
+				</tr>
+				<tr>
+					<td>Phòng</td>
+					<td><input type="text" title="{{tooltips[75]}}" name="phong" ng-model="data.phong" class="input-form"></td>
+				</tr>
+				<tr>
+					<td>Tủ, giá</td>
+					<td><input type="text" title="{{tooltips[75]}}" name="tuGia" ng-model="data.tuGia" class="input-form"></td>
+				</tr>
+				<tr>
+					<td>Ngăn tủ, ngăn giá</td>
+					<td><input type="text" title="{{tooltips[75]}}" name="ngan" ng-model="data.ngan" class="input-form"></td>
+				</tr>
+				<tr>
+					<td>Hộp</td>
+					<td><input type="text" title="{{tooltips[75]}}" name="hop" ng-model="data.hop" class="input-form"></td>
+				</tr>
+				<tr>
+					<td><label>67. Giấy phép nhập mẫu:</label></td>
 					<td><input type="file" title="{{tooltips[77]}}" name="giayPhepNhapMau" ng-model="data.giayPhepNhapMau" class="input-form" accept="image/x-png, image/gif, image/jpeg, .docx, .doc, .pdf"></td>
 				</tr>
 				<tr>
-					<td><label>67. Hồ sơ nhập mẫu vật đi kèm:</label></td>
+					<td><label>68. Hồ sơ nhập mẫu vật đi kèm:</label></td>
 					<td><input type="file" title="{{tooltips[78]}}" name="hoSoNhapMauVatDiKem" ng-model="data.hoSoNhapMauVatDiKem" class="input-form" accept=".doc, docx, .pdf" ></td>
 				</tr>
 				<tr>
-					<td><label>68. Người nhập phiếu mẫu vật (*):</label></td>
+					<td><label>69. Người nhập phiếu mẫu vật (*):</label></td>
 					<td><input type="text" title="{{tooltips[79]}}" name="nguoiNhapPhieuMauVat" ng-model="data.nguoiNhapPhieuMauVat" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>69. Người nhập thông tin vào phần mềm:</label></td>
+					<td><label>70. Người nhập thông tin vào phần mềm:</label></td>
 					<td><input type="text" title="{{tooltips[80]}}" name="nguoiNhapVaoPhanMem" ng-model="data.nguoiNhapVaoPhanMem" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>70: Thông tin khác </label></td>
+					<td><label>71. Thông tin khác </label></td>
 					<td><input type="text" ng-model="data.thongTinKhac8" title="{{tooltips[81]}}" name="thongTinKhac8" class="input-form"></td>
 				</tr>
 			</table>
@@ -465,7 +477,7 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
 				<tr>
-					<td><label>71. Thông tin khác</label></td>
+					<td><label>72. Thông tin khác</label></td>
 					<td><input type="text" title="{{tooltips[82]}}" name="thongTinKhac9" ng-model="data.thongTinKhac9" class="input-form"></td>
 				</tr>
 			</table>
