--- a/app/views/users/add-paleontological-form.template.html
+++ b/app/views/users/add-paleontological-form.template.html
@@ -1,13 +1,13 @@
 <div class="" style="margin-top: 60px;">
 	<form id="form-content">
-		<center><h2>Chỉnh sửa mẫu dữ liệu cổ sinh</h2></center>
+		<center><h2>Thêm mẫu dữ liệu cổ sinh</h2></center>
 
 		<div class="container map-detail" style="margin-top: 50px;">
 			<table>
 				<tr>
 					<td><label>Mã đề tài (*)</label></td>
 					<td>
-						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" maxlength="100" required>
+						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form"  required>
 					</td>
 				</tr>
 			</table>
@@ -16,29 +16,29 @@
 			<table>
 				<h3 class="h3-title">SỐ HIỆU</h3>
 				<tr>
-					<td><label>1. Số hiệu thực địa (*):</label></td>
-					<td><input type="text" maxlength="100" title="{{tooltips[1]}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
+					<td><label>01.Số hiệu thực địa (*):</label></td>
+					<td><input type="text"  title="{{tooltips[1]}}" name="soHieuThucDia" ng-model="data.soHieuThucDia" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>2. Số hiệu bảo tàng cơ sở(*):</label></td>
-					<td><input type="text" maxlength="100" title="{{tooltips[2]}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
+					<td><label>02.Số hiệu bảo tàng cơ sở(*):</label></td>
+					<td><input type="text"  title="{{tooltips[2]}}" name="soHieuBaoTangCS" ng-model="data.soHieuBaoTangCS" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>3. Số hiệu BTTNVN:</label></td>
-					<td><input type="text" maxlength="100" title="{{tooltips[3]}}" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
+					<td><label>03.Số hiệu BTTNVN:</label></td>
+					<td><input type="text"  title="{{tooltips[3]}}" name="soHieuBTTNVN" ng-model="data.soHieuBTTNVN" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>4. Mã kí hiệu mẫu vật quốc tế:</label></td>
-					<td><input type="text" maxlength="100" title="{{tooltips[4]}}" name="maKyHieuMauVatQuocTe" ng-model="data.maKyHieuMauVatQuocTe" class="input-form"></td>
+					<td><label>04.Mã kí hiệu mẫu vật quốc tế:</label></td>
+					<td><input type="text"  title="{{tooltips[4]}}" name="maKyHieuMauVatQuocTe" ng-model="data.maKyHieuMauVatQuocTe" class="input-form"></td>
 				</tr>
 
 				<tr>
-					<td><label>5. Các kí hiệu mẫu vật khác:</label></td>
-					<td><input type="text" title="{{tooltips[5]}}" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form" maxlength="100" required></td>
+					<td><label>05.Các kí hiệu mẫu vật khác:</label></td>
+					<td><input type="text" title="{{tooltips[5]}}" name="kyHieuMauVatKhac" ng-model="data.kyHieuMauVatKhac" class="input-form"  required></td>
 				</tr>
 				<tr>
-					<td><label>6. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[6]}}" name="thongTinKhac1" ng-model="data.thongTinKhac1" class="input-form" maxlength="100" required></td>
+					<td><label>06.Thông tin khác:</label></td>
+					<td><input type="text" title="{{tooltips[6]}}" name="thongTinKhac1" ng-model="data.thongTinKhac1" class="input-form"  required></td>
 				</tr>
 			</table>
 		</div>
@@ -46,15 +46,15 @@
 			<table>
 				<h3 class="h3-title">TÊN MẪU VẬT</h3>
 				<tr>
-					<td><label>7. Tên Việt Nam (*):</label></td>
+					<td><label>07.Tên Việt Nam (*):</label></td>
 					<td><input type="text" title="{{tooltips[7]}}" name="tenVietNam" ng-model="data.tenVietNam" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>8. Tên địa phương:</label></td>
+					<td><label>08.Tên địa phương:</label></td>
 					<td><input type="text" title="{{tooltips[8]}}" name="tenDiaPhuong" ng-model="data.tenDiaPhuong" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>9. Tên Tiếng Anh:</label></td>
+					<td><label>09.Tên Tiếng Anh:</label></td>
 					<td><input type="text" title="{{tooltips[9]}}" name="tenTiengAnh" ng-model="data.tenTiengAnh" class="input-form"></td>
 				</tr>
 				<tr>
@@ -68,12 +68,12 @@
 					<td><input type="text" title="{{tooltips[11]}}" name="tenDongNghia" ng-model="data.tenDongNghia" id="tenDongNghia" class="input-form"></td>
 				</tr>
 				<tr>
-					<td>Giới (*): </td>
-					<td><input type="text" title="{{tooltips[12]}}" name="gioi" ng-model="data.gioi" id="gioi" class="input-form" required></td>
+					<td>Giới: </td>
+					<td><input type="text" title="{{tooltips[12]}}" name="gioi" ng-model="data.gioi" id="gioi" class="input-form"></td>
 				</tr>
 				<tr>
-					<td>Ngành (*): </td>
-					<td><input type="text" title="{{tooltips[13]}}" name="nganh" ng-model="data.nganh" id="nganh" class="input-form" required></td>
+					<td>Ngành: </td>
+					<td><input type="text" title="{{tooltips[13]}}" name="nganh" ng-model="data.nganh" id="nganh" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Lớp (*): </td>
@@ -88,8 +88,8 @@
 					<td><input type="text" title="{{tooltips[16]}}" name="ho" ng-model="data.ho" id="ho" class="input-form" required="required"></td>
 				</tr>
 				<tr>
-					<td>Chi/Giống(*): </td>
-					<td><input type="text" title="{{tooltips[17]}}" name="chi" ng-model="data.chi" id="chi" class="input-form" required></td>
+					<td>Chi/Giống: </td>
+					<td><input type="text" title="{{tooltips[17]}}" name="chi" ng-model="data.chi" id="chi" class="input-form"></td>
 				</tr>
 
 				<tr>
@@ -106,7 +106,7 @@
 				</tr>
 				<tr>
 					<td><label>13. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[21]}}" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form" maxlength="100" required></td>
+					<td><input type="text" title="{{tooltips[21]}}" name="thongTinKhac2" ng-model="data.thongTinKhac2" class="input-form"  required></td>
 				</tr>
 			</table>
 		</div>
@@ -142,7 +142,7 @@
 
 				<tr>
 					<td><label>19. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[27]}}" name="thongTinKhac3" ng-model="data.thongTinKhac3" class="input-form" maxlength="100" required></td>
+					<td><input type="text" title="{{tooltips[27]}}" name="thongTinKhac3" ng-model="data.thongTinKhac3" class="input-form"  required></td>
 				</tr>
 			</table>
 		</div>
@@ -236,7 +236,7 @@
 				</tr>
 				<tr>
 					<td><label>30. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[43]}}" name="thongTinKhac4" class="input-form" ng-model="data.thongTinKhac4" maxlength="100" required></td>
+					<td><input type="text" title="{{tooltips[43]}}" name="thongTinKhac4" class="input-form" ng-model="data.thongTinKhac4"  required></td>
 				</tr>
 			</table>
 		</div>
@@ -281,7 +281,7 @@
 				</tr>
 				<tr>
 					<td><label>40. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[53]}}" name="thongTinKhac5" class="input-form" ng-model="data.thongTinKhac5" maxlength="100" required></td>
+					<td><input type="text" title="{{tooltips[53]}}" name="thongTinKhac5" class="input-form" ng-model="data.thongTinKhac5"  required></td>
 				</tr>
 			</table>
 		</div>
@@ -297,21 +297,18 @@
 					<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple title="{{tooltips[55]}}" name="hinhAnhNgoaiThucDia" ng-model="data.hinhAnhNgoaiThucDia" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>43. Thông tin về phim, video:</label></td>
+					<td><label>43.ng tin về phim, video (*): </label></td>
 					<td>
-						<table>
-							<tr>
-								<td>
-									<input type="text" title="{{tooltips[56]}}" name="videoStr" ng-model="data.videoStr" class="input-form" placeholder="Thông tin thêm về phim">
-								</td>
-								<td>
-									<input type="file" accept="video/mp4,video/x-m4v,video/*" name ="videoFile" ng-model="data.videoFile" class="input-form" required>
-								</td>
-							</tr>
-						</table>	
+						<input type="text" title="{{tooltips[56]}}" name="videoStr" ng-model="data.videoStr" class="input-form" placeholder="Thông tin thêm về phim">
 					</td>
 				</tr>
-				<tr><td colspan="2"><label>44. Xử lý chế tác mẫu vật: </label></td></tr>
+				<tr>
+					<td><label>44.eo (*):</label></td>
+					<td>
+						<input type="file" accept="video/mp4,video/x-m4v,video/*" name ="videoFile" ng-model="data.videoFile" class="input-form" required>
+					</td>
+				</tr>
+				<tr><td colspan="2"><label>45. Xử lý chế tác mẫu vật: </label></td></tr>
 				<tr>
 					<td>Hình ảnh đính kèm Xử lý chế tác:</td>
 					<td><input type="file" multiple title="{{tooltips[57]}}" name="hinhAnhDinhKem" ng-model="data.hinhAnhDinhKem" accept="image/x-png, image/gif, image/jpeg, .pdf" class="input-form"></td>
@@ -340,15 +337,20 @@
 					<td>Ảnh mẫu sau chế tác:</td>
 					<td><input type="file" title="{{tooltips[63]}}" name="anhMauSauCheTac" ng-model="data.anhMauSauCheTac" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf" ></td>
 				</tr>
-				<tr><td colspan="2"><label>45. Thông tin DNA</label></td></tr>
-				<tr>
+				<tr><td colspan="2"><label>46. Thông tin DNA</label></td></tr>
+<!-- 				<tr>
 					<td>Đính kèm chạy trình tự DNA</td>
 					<td><input type="file" multiple title="{{tooltips[64]}}" name="dinhKemChayTrinhTuDNA" ng-model="data.dinhKemChayTrinhTuDNA" class="input-form"></td>
 				</tr>
 				<tr>
 					<td>Trích dẫn chạy trình tự DNA</td>
 					<td><input type="text" multiple title="{{tooltips[65]}}" name="trichDanTrinhTuDNA" ng-model="data.trichDanTrinhTuDNA" class="input-form"></td>
+				</tr> -->
+				<tr>
+					<td>Vùng gen phân tích</td>
+					<td><input type="text" title="{{tooltips[64]}}" id="vungGenPhanTich" name="vungGenPhanTich" ng-model="data.vungGenPhanTich" class="input-form"></td>
 				</tr>
+
 				<tr>
 					<td>Trình tự DNA</td>
 					<td><input type="text" multiple title="{{tooltips[66]}}" name="trinhTuDNA" ng-model="data.trinhTuDNA" class="input-form"></td>
@@ -362,8 +364,8 @@
 					<td><input type="text" title="{{tooltips[68]}}" name="congBoQuocTe" ng-model="data.congBoQuocTe" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>46. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[69]}}" name="thongTinKhac6" ng-model="data.thongTinKhac6" class="input-form" maxlength="100" required></td>
+					<td><label>47. Thông tin khác:</label></td>
+					<td><input type="text" title="{{tooltips[69]}}" name="thongTinKhac6" ng-model="data.thongTinKhac6" class="input-form"  required></td>
 				</tr>	
 			</table>
 		</div>
@@ -371,7 +373,7 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN BỐ VÀ GIÁ TRỊ SỬ DỤNG</h3>
 				<tr>
-					<td colspan="2"><label>47. Phân bố địa lý của taxon định loại (*)</label></td>
+					<td colspan="2"><label>48. Phân bố địa lý của taxon định loại (*)</label></td>
 				</tr>
 				<tr>
 					<td>Phân bố Việt Nam (*):</td>
@@ -388,12 +390,12 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>48. Giá trị sử dụng:</label></td>
+					<td><label>49. Giá trị sử dụng:</label></td>
 					<td><input type="text" title="{{tooltips[72]}}" name="giaTriSuDung" ng-model="data.giaTriSuDung" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>49. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[73]}}" name="thongTinKhac7" ng-model="data.thongTinKhac7" class="input-form" maxlength="100" required></td>
+					<td><label>50. Thông tin khác:</label></td>
+					<td><input type="text" title="{{tooltips[73]}}" name="thongTinKhac7" ng-model="data.thongTinKhac7" class="input-form"  required></td>
 				</tr>	
 			</table>
 		</div>
@@ -401,23 +403,23 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 				<tr>
-					<td><label>50. Ngày nhập mẫu: </label></td>
+					<td><label>51. Ngày nhập mẫu: </label></td>
 					<td><input type="date" title="{{tooltips[74]}}" name="ngayNhapMau" ng-model="data.ngayNhapMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>51. Người giao mẫu: </label></td>
+					<td><label>52. Người giao mẫu: </label></td>
 					<td><input type="text" title="{{tooltips[75]}}" name="nguoiGiao" ng-model="data.nguoiGiao" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>52. Người nhận mẫu</label></td>
+					<td><label>53. Người nhận mẫu</label></td>
 					<td><input type="text" title="{{tooltips[76]}}" name="nguoiNhan" ng-model="data.nguoiNhan" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>53. Cơ quan nhập mẫu: </label></td>
+					<td><label>54. Cơ quan nhập mẫu: </label></td>
 					<td><input type="text" title="{{tooltips[77]}}" name="coQuanNhapVatMau" ng-model="data.coQuanNhapVatMau" id="coQuanNhapVatMau" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>54. Hình thức nhập mẫu:</label></td>
+					<td><label>55. Hình thức nhập mẫu:</label></td>
 					<td>
 						<select class="select-box" title="{{tooltips[78]}}" name="hinhThucNhapMau" ng-model="data.hinhThucNhapMau">
 							<option value="Thu thập">Thu thập</option>
@@ -428,7 +430,7 @@
 				</tr>
 
 				<tr>
-					<td><label>55. Trao đổi mẫu: </label></td>
+					<td><label>56. Trao đổi mẫu: </label></td>
 					<td>
 						<select class="select-box" title="{{tooltips[79]}}" name="traoDoiMau" ng-model="data.traoDoiMau">
 							<option value="Có thể">Có thể</option>
@@ -437,7 +439,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td><label>56. Vay mượn mẫu:</label></td>
+					<td><label>57. Vay mượn mẫu:</label></td>
 					<td>
 						<select class="select-box" title="{{tooltips[80]}}" name="vayMuon" ng-model="data.vayMuon">
 							<option value="Có thể">Có thể</option>
@@ -445,33 +447,49 @@
 						</select>
 					</td>
 				</tr>
-				<tr>
-					<td><label>57. Khu lưu trữ mẫu:</label></td>
-					<td><input type="text" title="{{tooltips[81]}}" name="khuLuuTruMau" ng-model="data.khuLuuTruMau" class="input-form"></td>
-				</tr>
+
 				<tr>
 					<td><label>58. Nơi lưu trữ:</label></td>
-					<td><input type="text" title="{{tooltips[82]}}" name="noiLuuTru" ng-model="data.noiLuuTru" class="input-form"></td>
+					<td><input type="text" title="{{tooltips[81]}}" name="noiLuuTru" ng-model="data.noiLuuTru" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>59. Giấy phép nhập mẫu:</label></td>
+					<td><label>59. Khu lưu trữ mẫu:</label></td>
+				</tr>
+				<tr>
+					<td>Phòng</td>
+					<td><input type="text" title="{{tooltips[82]}}" name="phong" ng-model="data.phong" class="input-form"></td>
+				</tr>
+				<tr>
+					<td>Tủ, giá</td>
+					<td><input type="text" title="{{tooltips[82]}}" name="tuGia" ng-model="data.tuGia" class="input-form"></td>
+				</tr>
+				<tr>
+					<td>Ngăn tủ, ngăn giá</td>
+					<td><input type="text" title="{{tooltips[82]}}" name="ngan" ng-model="data.ngan" class="input-form"></td>
+				</tr>
+				<tr>
+					<td>Hộp</td>
+					<td><input type="text" title="{{tooltips[82]}}" name="hop" ng-model="data.hop" class="input-form"></td>
+				</tr>
+				<tr>
+					<td><label>60. Giấy phép nhập mẫu:</label></td>
 					<td><input type="file" title="{{tooltips[83]}}" name="giayPhepNhapMau" ng-model="data.giayPhepNhapMau" class="input-form" accept="image/x-png, image/gif, image/jpeg, .docx, .doc, .pdf"></td>
 				</tr>
 				<tr>
-					<td><label>60. Hồ sơ nhập mẫu vật đi kèm:</label></td>
+					<td><label>61. Hồ sơ nhập mẫu vật đi kèm:</label></td>
 					<td><input type="file" title="{{tooltips[84]}}" name="hoSoNhapMauVatDiKem" ng-model="data.hoSoNhapMauVatDiKem" class="input-form" accept=".doc, docx, .pdf" ></td>
 				</tr>
 				<tr>
-					<td><label>61. Người nhập phiếu mẫu vật (*):</label></td>
+					<td><label>62. Người nhập phiếu mẫu vật (*):</label></td>
 					<td><input type="text" title="{{tooltips[85]}}" name="nguoiNhapPhieuMauVat" ng-model="data.nguoiNhapPhieuMauVat" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>62. Người nhập thông tin vào phần mềm:</label></td>
+					<td><label>63. Người nhập thông tin vào phần mềm:</label></td>
 					<td><input type="text" title="{{tooltips[86]}}" name="nguoiNhapVaoPhanMem" ng-model="data.nguoiNhapVaoPhanMem" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>63. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[87]}}" name="thongTinKhac8" ng-model="data.thongTinKhac8" class="input-form" maxlength="100" required></td>
+					<td><label>64. Thông tin khác:</label></td>
+					<td><input type="text" title="{{tooltips[87]}}" name="thongTinKhac8" ng-model="data.thongTinKhac8" class="input-form"  required></td>
 				</tr>	
 			</table>
 		</div>
@@ -479,7 +497,7 @@
 			<table>
 				<h3 class="h3-title">NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
 				<tr>
-					<td><label>64. Thông tin khác</label></td>
+					<td><label>65. Thông tin khác</label></td>
 					<td><input type="text" title="{{tooltips[88]}}" name="thongTinKhac" ng-model="data.thongTinKhac9" class="input-form"></td>
 				</tr>
 			</table>
