--- a/app/views/users/add-vegetable-form.template.html
+++ b/app/views/users/add-vegetable-form.template.html
@@ -6,7 +6,7 @@
 				<tr>
 					<td><label>Mã đề tài (*)</label></td>
 					<td>
-						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" maxlength="100" required>
+						<input type="text" name="maDeTai" ng-model="data.maDeTai" class="input-form" required>
 					</td>
 				</tr>
 			</table>
@@ -15,29 +15,29 @@
 			<table>
 				<h3 class="h3-title">SỐ HIỆU</h3>
 				<tr>
-					<td><label>1. Số hiệu thực địa (*):</label></td>
-					<td><input type="text" maxlength="100" title="{{tooltips[1]}}" name="soHieuThucDia" class="input-form" required></td>
+					<td><label>01. Số hiệu thực địa (*):</label></td>
+					<td><input type="text" title="{{tooltips[1]}}" name="soHieuThucDia" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>2. Số hiệu bảo tàng cơ sở(*):</label></td>
-					<td><input type="text" maxlength="100" title="{{tooltips[2]}}" name="soHieuBaoTangCS" class="input-form" required></td>
+					<td><label>02. Số hiệu bảo tàng cơ sở(*):</label></td>
+					<td><input type="text" title="{{tooltips[2]}}" name="soHieuBaoTangCS" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>3. Số hiệu BTTNVN:</label></td>
-					<td><input type="text" maxlength="100" title="{{tooltips[3]}}" name="soHieuBTTNVN" class="input-form"></td>
+					<td><label>03. Số hiệu BTTNVN:</label></td>
+					<td><input type="text" title="{{tooltips[3]}}" name="soHieuBTTNVN" class="input-form"></td>
 				</tr>
 				<tr>
-					<td><label>4. Mã kí hiệu mẫu vật quốc tế:</label></td>
-					<td><input type="text" maxlength="100" title="{{tooltips[4]}}" name="maKyHieuMauVatQuocTe" class="input-form"></td>
+					<td><label>04. Mã kí hiệu mẫu vật quốc tế:</label></td>
+					<td><input type="text" title="{{tooltips[4]}}" name="maKyHieuMauVatQuocTe" class="input-form"></td>
 				</tr>
 
 				<tr>
-					<td><label>5. Các kí hiệu mẫu vật khác:</label></td>
-					<td><input type="text" title="{{tooltips[5]}}" name="kyHieuMauVatKhac" class="input-form" maxlength="100" required></td>
+					<td><label>05. Các kí hiệu mẫu vật khác:</label></td>
+					<td><input type="text" title="{{tooltips[5]}}" name="kyHieuMauVatKhac" class="input-form" required></td>
 				</tr>
 				<tr>
-					<td><label>6. Thông tin khác:</label></td>
-					<td><input type="text" title="{{tooltips[6]}}" name="thongTinKhac1" class="input-form" maxlength="100" required></td>
+					<td><label>06. Thông tin khác:</label></td>
+					<td><input type="text" title="{{tooltips[6]}}" name="thongTinKhac1" class="input-form" required></td>
 				</tr>
 			</table>
 		</div>
@@ -45,15 +45,15 @@
 		<table>
 			<h3 class="h3-title">TÊN MẪU</h3>
 			<tr>
-				<td><label>7. Tên Việt Nam (*):</label></td>
+				<td><label>07. Tên Việt Nam (*):</label></td>
 				<td><input type="text" title="{{tooltips[7]}}" name="tenVietNam" class="input-form" required></td>
 			</tr>
 			<tr>
-				<td><label>8. Tên địa phương:</label></td>
+				<td><label>08. Tên địa phương:</label></td>
 				<td><input type="text" title="{{tooltips[8]}}" name="tenDiaPhuong" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>9. Tên Tiếng Anh:</label></td>
+				<td><label>09. Tên Tiếng Anh:</label></td>
 				<td><input type="text" title="{{tooltips[9]}}" name="tenTiengAnh" class="input-form"></td>
 			</tr>
 			<tr>
@@ -124,7 +124,7 @@
 			</tr>
 			<tr>
 				<td><label>13. Thông tin khác:</label></td>
-				<td><input type="text" title="{{tooltips[26]}}" name="thongTinKhac2" class="input-form" maxlength="100" required></td>
+				<td><input type="text" title="{{tooltips[26]}}" name="thongTinKhac2" class="input-form" required></td>
 			</tr>
 		</table>
 		</div>
@@ -159,7 +159,7 @@
 			</tr>
 			<tr>
 				<td><label>19. Thông tin khác:</label></td>
-				<td><input type="text" title="{{tooltips[32]}}" name="thongTinKhac3" class="input-form" maxlength="100" required></td>
+				<td><input type="text" title="{{tooltips[32]}}" name="thongTinKhac3" class="input-form" required></td>
 			</tr>
 		</table>
 		</div>
@@ -264,7 +264,7 @@
 			</tr>
 			<tr>
 				<td><label>33. Thông tin khác:</label></td>
-				<td><input type="text" title="{{tooltips[51]}}" name="thongTinKhac4" class="input-form" maxlength="100" required></td>
+				<td><input type="text" title="{{tooltips[51]}}" name="thongTinKhac4" class="input-form" required></td>
 			</tr>
 		</table>
 		</div>
@@ -289,25 +289,15 @@
 			</tr>
 			<tr>
 				<td><label>38. Mô tả/đặc điểm hình thái (*)</label></td>
-				<td><input type="text" title="{{tooltips[56]}}" name="moTaHinhThaiStr" class="input-form">
-				<input type="file" multiple accept="video/mp4,video/x-m4v,video/*" name ="moTaHinhThaiFile" class="input-form"></td>
+				<input type="file" multiple accept=".doc, .docx, .pdf" name ="moTaHinhThaiFile" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>39. Giới tính, giống:</label></td>
-				<td><input type="text" title="{{tooltips[57]}}" name="gioiTinhGiong" class="input-form" required></td>
-			</tr>
-
-			<tr>
-				<td><label>40. Giai đoạn sống trong vòng đời:</label></td>
-				<td><input type="text" title="{{tooltips[58]}}" name="giaiDoanSongTrongVongDoi" class="input-form" required></td>
-			</tr>
-			<tr>
-				<td><label>41. Hình vẽ:</label></td>
+				<td><label>39. Hình vẽ:</label></td>
 				<td><input type="file" title="{{tooltips[59]}}" name="hinhVe" class="input-form" accept="image/x-png, image/gif, image/jpeg, .docx, .doc, .pdf" ></td>
 			</tr>
 			<tr>
-				<td><label>42. Thông tin khác:</label></td>
-				<td><input type="text" title="{{tooltips[60]}}" name="thongTinKhac5" class="input-form" maxlength="100" required></td>
+				<td><label>40. Thông tin khác:</label></td>
+				<td><input type="text" title="{{tooltips[60]}}" name="thongTinKhac5" class="input-form" required></td>
 			</tr>
 		</table>
 		</div>
@@ -315,29 +305,26 @@
 		<table>
 			<h3 class="h3-title">NHÓM DỮ LIỆU HÌNH ẢNH, PHIM, TÀI LIỆU MẪU VẬT</h3>
 			<tr>
-				<td><label>43. Ảnh mẫu vật (*):</label></td>
+				<td><label>41. Ảnh mẫu vật (*):</label></td>
 				<td><input type="file" multiple title="{{tooltips[61]}}" name="anhMauVat" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf" required></td>
 			</tr>
 			<tr>
-				<td><label>44. Hình ảnh mẫu ngoài thực địa:</label></td>
+				<td><label>42. Hình ảnh mẫu ngoài thực địa:</label></td>
 				<td><input type="file" accept="image/x-png, image/gif, image/jpeg, .pdf" multiple title="{{tooltips[62]}}" name="hinhAnhNgoaiThucDia" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>45. Thông tin về phim, video:</label></td>
+				<td><label>43.ng tin về phim, video (*): </label></td>
 				<td>
-					<table>
-						<tr>
-							<td>
-								<input type="text" title="{{tooltips[63]}}" name= "videoStr" class="input-form" placeholder="Thông tin thêm về phim" required>
-							</td>
-							<td>
-								<input type="file" accept="video/mp4,video/x-m4v,video/*" name ="videoFile" class="input-form" required>
-							</td>
-						</tr>
-					</table>	
+					<input type="text" title="{{tooltips[63]}}" name="videoStr" ng-model="data.videoStr" class="input-form" placeholder="Thông tin thêm về phim">
 				</td>
 			</tr>
-			<tr><td colspan="2"><label>46. Xử lý chế tác mẫu vật: </label></td></tr>
+			<tr>
+				<td><label>44.eo (*):</label></td>
+				<td>
+					<input type="file" accept="video/mp4,video/x-m4v,video/*" name ="videoFile" ng-model="data.videoFile" class="input-form" required>
+				</td>
+			</tr>
+			<tr><td colspan="2"><label>45. Xử lý chế tác mẫu vật: </label></td></tr>
 			<tr>
 				<td>Hình ảnh đính kèm Xử lý chế tác:</td>
 				<td><input type="file" multiple title="{{tooltips[64]}}" name="hinhAnhDinhKem" accept="image/x-png, image/gif, image/jpeg, .pdf" class="input-form"></td>
@@ -362,7 +349,7 @@
 				<td>Ảnh mẫu sau chế tác:</td>
 				<td><input type="file" title="{{tooltips[69]}}" name="anhMauSauCheTac" class="input-form" accept="image/x-png, image/gif, image/jpeg, .pdf" ></td>
 			</tr>
-			<tr><td colspan="2"><label>47. Thông tin DNA</label></td></tr>
+			<tr><td colspan="2"><label>46. Thông tin DNA</label></td></tr>
 			<tr>
 				<td>Vị trí lấy mẫu DNA (lá, thân, rễ,...):</td>
 				<td><input type="text" id="viTriLayMauDNA" title="{{tooltips[70]}}" name="boPhanLayMauDNA" class="input-form"></td>
@@ -394,12 +381,12 @@
 				<td><input type="text" title="{{tooltips[76]}}" name="congBoQuocTe" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>48. Thông tin mẫu hạt phấn</label></td>
+				<td><label>47. Thông tin mẫu hạt phấn</label></td>
 				<td><input type="text" multiple title="{{tooltips[77]}}" name="thongTinMauHatPhan" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>49. Thông tin khác:</label></td>
-				<td><input type="text" title="{{tooltips[78]}}" name="thongTinKhac5" class="input-form" maxlength="100" required></td>
+				<td><label>48. Thông tin khác:</label></td>
+				<td><input type="text" title="{{tooltips[78]}}" name="thongTinKhac5" class="input-form" required></td>
 			</tr>			
 		</table>
 		</div>
@@ -407,26 +394,26 @@
 		<table>
 			<h3 class="h3-title">NHÓM DỮ LIỆU PHÂN BỐ VÀ GIÁ TRỊ SỬ DỤNG</h3>
 			<tr>
-				<td><label>50. Phân bố Việt Nam (*):</label></td>
+				<td><label>49. Phân bố Việt Nam (*):</label></td>
 				<td>
 					<input type="text" title="{{tooltips[79]}}" name="phanBoVietNamStr" class="input-form">
 					<input type="file" multiple name ="phanBoVietNamFile">
 				</td>
 			</tr>
 			<tr>
-				<td><label>51. Phân bố trên thế giới (nếu có):</label></td>
+				<td><label>50. Phân bố trên thế giới (nếu có):</label></td>
 				<td>
 					<input type="text" title="{{tooltips[80]}}" name="phanBoTrenTheGioiStr" class="input-form">
 					<input type="file" multiple name ="phanBoTrenTheGioiFile">
 				</td>
 			</tr>
 			<tr>
-				<td><label>52. Giá trị sử dụng:</label></td>
+				<td><label>51. Giá trị sử dụng:</label></td>
 				<td><input type="text" title="{{tooltips[81]}}" name="giaTriSuDung" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>53. Thông tin khác:</label></td>
-				<td><input type="text" title="{{tooltips[82]}}" name="thongTinKhac6" class="input-form" maxlength="100" required></td>
+				<td><label>52. Thông tin khác:</label></td>
+				<td><input type="text" title="{{tooltips[82]}}" name="thongTinKhac6" class="input-form" required></td>
 			</tr>
 		</table>
 		</div>
@@ -434,23 +421,23 @@
 		<table>
 			<h3 class="h3-title">NHÓM DỮ LIỆU LƯU TRỮ, BẢO QUẢN MẪU</h3>
 			<tr>
-				<td><label>54. Ngày nhập mẫu: </label></td>
+				<td><label>53. Ngày nhập mẫu: </label></td>
 				<td><input type="date" title="{{tooltips[83]}}" name="ngayNhapMau" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>55. Người giao mẫu: </label></td>
+				<td><label>54. Người giao mẫu: </label></td>
 				<td><input type="text" title="{{tooltips[84]}}" name="nguoiGiao" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>56. Người nhận mẫu</label></td>
+				<td><label>55. Người nhận mẫu</label></td>
 				<td><input type="text" title="{{tooltips[85]}}" name="nguoiNhan" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>57. Cơ quan nhập mẫu: </label></td>
+				<td><label>56. Cơ quan nhập mẫu: </label></td>
 				<td><input type="text" title="{{tooltips[86]}}" name="coQuanNhapVatMau" id="coQuanNhapVatMau" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>58. Hình thức nhập mẫu:</label></td>
+				<td><label>57. Hình thức nhập mẫu:</label></td>
 				<td>
 					<select class="select-box" title="{{tooltips[87]}}" name="hinhThucNhapMau">
 						<option value="Thu thập">Thu thập</option>
@@ -461,7 +448,7 @@
 			</tr>
 
 			<tr>
-				<td><label>59. Trao đổi mẫu: </label></td>
+				<td><label>58. Trao đổi mẫu: </label></td>
 				<td>
 					<select title="{{tooltips[88]}}" class="select-box" name="traoDoiMau">
 						<option value="Có thể">Có thể</option>
@@ -470,7 +457,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td><label>60. Vay mượn mẫu:</label></td>
+				<td><label>59. Vay mượn mẫu:</label></td>
 				<td>
 					<select class="select-box" title="{{tooltips[89]}}" name="vayMuon">
 						<option value="Có thể">Có thể</option>
@@ -479,43 +466,58 @@
 				</td>
 			</tr>
 			<tr>
-				<td><label>61. Khu lưu trữ mẫu:</label></td>
-				<td><input type="text" title="{{tooltips[90]}}" name="khuLuuTruMau" class="input-form"></td>
-			</tr>
-			<tr>
-				<td><label>62. Nơi lưu trữ:</label></td>
+				<td><label>60. Nơi lưu trữ:</label></td>
 				<td><input type="text" title="{{tooltips[91]}}" name="noiLuuTru" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>63. Giấy phép nhập mẫu:</label></td>
+					<td><label>61. Khu lưu trữ mẫu:</label></td>
+			</tr>
+			<tr>
+				<td>Phòng</td>
+				<td><input type="text" title="{{tooltips[90]}}" name="phong" ng-model="data.phong" class="input-form"></td>
+			</tr>
+			<tr>
+				<td>Tủ, giá</td>
+				<td><input type="text" title="{{tooltips[90]}}" name="tuGia" ng-model="data.tuGia" class="input-form"></td>
+			</tr>
+			<tr>
+				<td>Ngăn tủ, ngăn giá</td>
+				<td><input type="text" title="{{tooltips[90]}}" name="nganHop" ng-model="data.nganHop" class="input-form"></td>
+			</tr>
+			<tr>
+				<td>Hộp</td>
+				<td><input type="text" title="{{tooltips[90]}}" name="hop" ng-model="data.hop" class="input-form"></td>
+			</tr>
+			<tr>
+				<td><label>62. Giấy phép nhập mẫu:</label></td>
 				<td><input type="file" title="{{tooltips[92]}}" name="giayPhepNhapMau" class="input-form" accept="image/x-png, image/gif, image/jpeg, .docx, .doc, .pdf"></td>
 			</tr>
 			<tr>
-				<td><label>64. Hồ sơ nhập mẫu vật đi kèm:</label></td>
+				<td><label>63. Hồ sơ nhập mẫu vật đi kèm:</label></td>
 				<td><input type="file" title="{{tooltips[93]}}" name="hoSoNhapMauVatDiKem" class="input-form" accept=".doc, docx, .pdf" ></td>
 			</tr>
 			<tr>
-				<td><label>65. Người nhập phiếu mẫu vật (*):</label></td>
+				<td><label>64. Người nhập phiếu mẫu vật (*):</label></td>
 				<td><input type="text" title="{{tooltips[94]}}" name="nguoiNhapPhieuMauVat" class="input-form" required></td>
 			</tr>
 			<tr>
-				<td><label>66. Người nhập thông tin vào phần mềm:</label></td>
+				<td><label>65. Người nhập thông tin vào phần mềm:</label></td>
 				<td><input type="text" title="{{tooltips[95]}}" name="nguoiNhapVaoPhanMem" class="input-form"></td>
 			</tr>
 			<tr>
-				<td><label>67. Thông tin khác:</label></td>
-				<td><input type="text" title="{{tooltips[96]}}" name="thongTinKhac7" class="input-form" maxlength="100" required></td>
+				<td><label>66. Thông tin khác:</label></td>
+				<td><input type="text" title="{{tooltips[96]}}" name="thongTinKhac7" class="input-form" required></td>
 			</tr>
 		</table>
 		</div>
 		<div class="container map-detail" style="margin-top: 50px;">
-		<table>
-			<h3 class="h3-title">NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
-			<tr>
-				<td><label>68. Thông tin khác</label></td>
-				<td><input type="text" title="{{tooltips[97]}}" name="thongTinKhac8" class="input-form"></td>
-			</tr>
-		</table>
+			<table>
+				<h3 class="h3-title">NHÓM DỮ LIỆU THÔNG TIN KHÁC</h3>
+				<tr>
+					<td><label>67. Thông tin khác</label></td>
+					<td><input type="text" title="{{tooltips[97]}}" name="thongTinKhac8" class="input-form"></td>
+				</tr>
+			</table>
 		</div>
 	</form>
 	<center><button style="margin-top: 30px;" type="submit" ng-click="addPost()" class="btn btn-success btn-lg">Thêm mẫu</button></center>
