--- a/app/views/users/add-land-form.template.html
+++ b/app/views/users/add-land-form.template.html
@@ -202,19 +202,19 @@
 				</tr>
 				<tr>
 					<td><label>31. Khả năng thoát nước nơi thu mẫu (*):</label></td>
-					<td><input type="number"  title="{{tooltips[36]}}" name="khaNangThoatNuoc" ng-model="data.khaNangThoatNuoc" id="khaNangThoatNuoc" required class="input-form"></td>
+					<td><input type="text"  title="{{tooltips[36]}}" name="khaNangThoatNuoc" ng-model="data.khaNangThoatNuoc" id="khaNangThoatNuoc" required class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>32. Thời tiết khi thu mẫu:</label></td>
-					<td><input type="number"  title="{{tooltips[37]}}" name="thoiTietKhiThuMau" ng-model="data.thoiTietKhiThuMau" id="thoiTietKhiThuMau" class="input-form"></td>
+					<td><input type="text"  title="{{tooltips[37]}}" name="thoiTietKhiThuMau" ng-model="data.thoiTietKhiThuMau" id="thoiTietKhiThuMau" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>33. Dạng địa hình nơi thu mẫu (*):</label></td>
-					<td><input type="number" title="{{tooltips[38]}}" name="dangDiaHinhNoiThuMau" ng-model="data.dangDiaHinhNoiThuMau" id="dangDiaHinhNoiThuMau"  required class="input-form"></td>
+					<td><input type="text" title="{{tooltips[38]}}" name="dangDiaHinhNoiThuMau" ng-model="data.dangDiaHinhNoiThuMau" id="dangDiaHinhNoiThuMau"  required class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>34. Thảm thực vật hiện tại nơi thu mẫu (*):</label></td>
-					<td><input type="number"  title="{{tooltips[39]}}" name="thamThucVatNoiThuMau" ng-model="data.thamThucVatNoiThuMau" id="thamThucVatNoiThuMau" required class="input-form"></td>
+					<td><input type="text"  title="{{tooltips[39]}}" name="thamThucVatNoiThuMau" ng-model="data.thamThucVatNoiThuMau" id="thamThucVatNoiThuMau" required class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>35. Thông tin về Dự án, đề tài/chuyến/đợt thu thập mẫu vật (*):</label></td>
