--- a/app/views/users/edit/edit-vegetable-form.template.html
+++ b/app/views/users/edit/edit-vegetable-form.template.html
@@ -1,4 +1,4 @@
-<div class="container map-detail" style="margin-top: 50px;">
+<div class="" style="margin-top: 60px;">
 	<form id="form-content">
 		<input type="text" name="id" style="display: none;" ng-model="data.id">
 		<center><h2>Chỉnh sửa mẫu dữ liệu thực vật</h2></center>
