--- a/app/views/users/add-animal-form.template.html
+++ b/app/views/users/add-animal-form.template.html
@@ -94,7 +94,7 @@
 			</tr>
 			<tr>
 				<td>Họ(*): </td>
-				<td><input type="text" id="ho" ng-model="data.ho" title="{{tooltips[19]}}" name="ho" class="input-form" required</td>
+				<td><input type="text" id="ho" ng-model="data.ho" title="{{tooltips[19]}}" name="ho" class="input-form" required></td>
 			</tr>
 			<tr>
 				<td>Phân họ: </td>
@@ -126,7 +126,7 @@
 				<td><input type="text" ng-model="data.thongTinKhac2" title="{{tooltips[26]}}" name="thongTinKhac2" class="input-form"></td>
 			</tr>
 		</table>
-		</td>
+		</div>
 		<div class="container map-detail" style="margin-top: 50px;">
 		<table>
 			<h3 class="h3-title">SỐ LƯỢNG VÀ CHẤT LƯỢNG MẪU VẬT</h3>
