--- a/app/views/users/edit/edit-land-form.template.html
+++ b/app/views/users/edit/edit-land-form.template.html
@@ -132,44 +132,44 @@
 				<tr>
 					<td><label>24. Địa điểm thu mẫu: </label></td>
 					<td ng-controller="PlaceController">
-					<table>
-						<tr>
-							<td>Quốc gia(*): </td>
-							<td>
-								<select class="select-box" ng-model="quocGia" title="{{tooltips[24]}}" name="quocGia" required>
-									<option value="VietNam">Việt Nam</option>
-								</select>
-							</td>
-						</tr>
-						<tr>
-							<td>Tỉnh/Thành phố(*): </td>
-							<td>
-								<select class="select-box" title="{{tooltips[25]}}" name="tinh" required ng-model= "$parent.tinh" ng-change="cityChange()">
-									<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
-								</select>
-							</td>
-						</tr>
-						<tr>
-							<td>Huyện(*):</td>
-							<td>
-								<select class="select-box" title="{{tooltips[26]}}" name="huyen" required ng-model= "$parent.huyen" ng-change="districtChange()">
-									<option ng-repeat="(key, district) in districts | customCity: tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
-								</select>
-							</td>
-						</tr>
-						<tr>
-							<td>Xã(*): </td>
-							<td>
-								<select class="select-box" ng-model="xa" title="{{tooltips[27]}}" name="xa" required>
-									<option ng-repeat="(key, ward) in wards | customDistrict: huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
-								</select>
-							</td>
-						</tr>
-						<tr>
-							<td>Thôn/Xóm: </td>
-							<td><input type="text" ng-model="thon" title="{{tooltips[28]}}" name="thon" id="thon" class="input-form"></td>
-						</tr>
-					</table>
+						<table>
+							<tr>
+								<td>Quốc gia(*): </td>
+								<td>
+									<select class="select-box" ng-model="data.quocGia" title="{{tooltips[24]}}" name="quocGia" required>
+										<option value="Việt Nam">Việt Nam</option>
+									</select>
+								</td>
+							</tr>
+							<tr>
+								<td>Tỉnh/Thành phố(*): </td>
+								<td>
+									<select class="select-box" title="{{tooltips[25]}}" name="tinh" required ng-model= "$parent.data.tinh" ng-click="cityChange()">
+										<option ng-repeat="(key, city) in cities" value="{{key}}">{{city.type +" " + city.name}}</option>
+									</select>
+								</td>
+							</tr>
+							<tr>
+								<td>Huyện(*):</td>
+								<td>
+									<select class="select-box" title="{{tooltips[26]}}" name="huyen" required ng-model= "$parent.data.huyen" ng-click="districtChange()">
+										<option ng-repeat="(key, district) in districts | customCity: data.tinh" value="{{key}}">{{district.type + " " + district.name}}</option>
+									</select>
+								</td>
+							</tr>
+							<tr>
+								<td>Xã(*): </td>
+								<td>
+									<select class="select-box" ng-model="data.xa" title="{{tooltips[27]}}" name="xa" required>
+										<option ng-repeat="(key, ward) in wards | customDistrict: data.huyen" value="{{key}}">{{ward.type+ " " + ward.name}}</option>
+									</select>
+								</td>
+							</tr>
+							<tr>
+								<td>Thôn/Xóm: </td>
+								<td><input type="text" ng-model="data.thon" title="{{tooltips[28]}}" name="thon" class="input-form"></td>
+							</tr>
+						</table>
 					</td>
 				</tr>
 				<tr><td><label>25. Vị trị tọa độ theo hệ tọa độ Việt Nam 2000</label></td></tr>
@@ -203,19 +203,19 @@
 				</tr>
 				<tr>
 					<td><label>31. Khả năng thoát nước nơi thu mẫu (*):</label></td>
-					<td><input type="number"  title="{{tooltips[36]}}" name="khaNangThoatNuoc" ng-model="data.khaNangThoatNuoc" id="khaNangThoatNuoc" required class="input-form"></td>
+					<td><input type="text"  title="{{tooltips[36]}}" name="khaNangThoatNuoc" ng-model="data.khaNangThoatNuoc" id="khaNangThoatNuoc" required class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>32. Thời tiết khi thu mẫu:</label></td>
-					<td><input type="number"  title="{{tooltips[37]}}" name="thoiTietKhiThuMau" ng-model="data.thoiTietKhiThuMau" id="thoiTietKhiThuMau" class="input-form"></td>
+					<td><input type="text"  title="{{tooltips[37]}}" name="thoiTietKhiThuMau" ng-model="data.thoiTietKhiThuMau" id="thoiTietKhiThuMau" class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>33. Dạng địa hình nơi thu mẫu (*):</label></td>
-					<td><input type="number" title="{{tooltips[38]}}" name="dangDiaHinhNoiThuMau" ng-model="data.dangDiaHinhNoiThuMau" id="dangDiaHinhNoiThuMau"  required class="input-form"></td>
+					<td><input type="text" title="{{tooltips[38]}}" name="dangDiaHinhNoiThuMau" ng-model="data.dangDiaHinhNoiThuMau" id="dangDiaHinhNoiThuMau"  required class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>34. Thảm thực vật hiện tại nơi thu mẫu (*):</label></td>
-					<td><input type="number"  title="{{tooltips[39]}}" name="thamThucVatNoiThuMau" ng-model="data.thamThucVatNoiThuMau" id="thamThucVatNoiThuMau" required class="input-form"></td>
+					<td><input type="text"  title="{{tooltips[39]}}" name="thamThucVatNoiThuMau" ng-model="data.thamThucVatNoiThuMau" id="thamThucVatNoiThuMau" required class="input-form"></td>
 				</tr>
 				<tr>
 					<td><label>35. Thông tin về Dự án, đề tài/chuyến/đợt thu thập mẫu vật (*):</label></td>
